syntax = "proto3";
package dewebservices.nft;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "nftmodule/nft.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

option go_package = "github.com/deweb-services/deweb/x/nftmodule/types";

// Query defines the gRPC querier service for NFT module
service Query {
    // Supply queries the total supply of a given denom or owner
    rpc Supply(QuerySupplyRequest) returns (QuerySupplyResponse) {
        option (google.api.http).get = "/dns/supply/{denom_id}";
    }

    // Owner queries the NFTs of the specified owner
    rpc Owner(QueryOwnerRequest) returns (QueryOwnerResponse) {
        option (google.api.http).get = "/dns/nfts";
    }

    // Collection queries the NFTs of the specified denom
    rpc Collection(QueryCollectionRequest) returns (QueryCollectionResponse) {
        option (google.api.http).get = "/dns/collectionsd/{denom_id}";
    }

    // Denom queries the definition of a given denom
    rpc Denom(QueryDenomRequest) returns (QueryDenomResponse) {
        option (google.api.http).get = "/dns/denoms/{denom_id}";
    }

    // Denoms queries all the denoms
    rpc Denoms(QueryDenomsRequest) returns (QueryDenomsResponse) {
        option (google.api.http).get = "/dns/denoms";
    }

    // NFT queries the NFT for the given denom and token ID
    rpc NFT(QueryNFTRequest) returns (QueryNFTResponse) {
        option (google.api.http).get = "/dns/domains/{token_id}";
    }
}

// QuerySupplyRequest is the request type for the Query/HTLC RPC method
message QuerySupplyRequest {
    string denom_id = 1 [ (gogoproto.moretags) = "yaml:\"denom_id\"" ];
    string owner = 2;
}

// QuerySupplyResponse is the response type for the Query/Supply RPC method
message QuerySupplyResponse {
    uint64 amount = 1;
}

// QueryOwnerRequest is the request type for the Query/Owner RPC method
message QueryOwnerRequest {
    string denom_id = 1 [ (gogoproto.moretags) = "yaml:\"denom_id\"" ];
    string owner = 2 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
    // pagination defines an optional pagination for the request.
    cosmos.base.query.v1beta1.PageRequest pagination = 3;
}

// QueryOwnerResponse is the response type for the Query/Owner RPC method
message QueryOwnerResponse {
    Owner owner = 1;
    cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryCollectionRequest is the request type for the Query/Collection RPC method
message QueryCollectionRequest {
    string denom_id = 1 [ (gogoproto.moretags) = "yaml:\"denom_id\"" ];
    // pagination defines an optional pagination for the request.
    cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryCollectionResponse is the response type for the Query/Collection RPC method
message QueryCollectionResponse {
    Collection collection = 1;
    cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryDenomRequest is the request type for the Query/Denom RPC method
message QueryDenomRequest {
    string denom_id = 1 [ (gogoproto.moretags) = "yaml:\"denom_id\"" ];
}

// QueryDenomResponse is the response type for the Query/Denom RPC method
message QueryDenomResponse {
    Denom denom = 1;
}

// QueryDenomsRequest is the request type for the Query/Denoms RPC method
message QueryDenomsRequest {
    // pagination defines an optional pagination for the request.
    cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryDenomsResponse is the response type for the Query/Denoms RPC method
message QueryDenomsResponse {
    repeated Denom denoms = 1 [ (gogoproto.nullable) = false ];

    cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryNFTRequest is the request type for the Query/NFT RPC method
message QueryNFTRequest {
    string token_id = 1 [ (gogoproto.moretags) = "yaml:\"token_id\"" ];
}

// QueryNFTResponse is the response type for the Query/NFT RPC method
message QueryNFTResponse {
    BaseNFT nft = 1 [ (gogoproto.customname) = "NFT" ];
}